--- a/skillclock.html
+++ b/skillclock.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Skill<div></div>Clock</h1>
+    <h1>Skill Clock</h1>
     <div id="clockGraphic"></div>
     <div id="timedSkills">
         <form id="typedWords"><input id="skillAdded" type="text" placeholder="enter a skill to learn" name="newskill">
@@ -20,7 +20,6 @@
         </form>
         <ul class="skillList">
         </ul>
-        <div id="savedTime"></div>
         <button id="remove">Remove from list</button>
     </div>
 
@@ -35,32 +34,6 @@
         </div>
     </div>
 
-    <div id="skillPicture"></div>
-
-
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyDWMfUinGcVenX73QTkue6ck2A6Ni4IToY",
-            authDomain: "skillclock-b4b41.firebaseapp.com",
-            projectId: "skillclock-b4b41",
-            storageBucket: "skillclock-b4b41.appspot.com",
-            messagingSenderId: "179768779495",
-            appId: "1:179768779495:web:c26ecb74dbdb390d22f842",
-            measurementId: "G-WP2N24HPPW"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
     <script src="skillclock.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
